tests/NormalTests/paczka2/big_fuzzy/50458697.err
Error in line 15: PIgu S685 96,8
Error in line 10: sCHs A266 27,8
Error in line 21: A266 S585 84,5
Error in line 31: A266 A229 79,5
Error in line 19: YT3Tg A229 169,5
Error in line 39: A266 A266 1,2
Error in line 44: EHJBQ S685 55,1
Error in line 53: sCHs S585 23,1
Error in line 55: sCHs A229 17,1
Error in line 61: A266 A229 20,0
Error in line 48: PIgu S585 61,1
Error in line 42: YT3Tg S685 20,2
Error in line 74: A266 S685 -1,7
Error in line 70: sCHs A229 37,5
Error in line 82: A266 S685 99,6
Error in line 78: KhbVbrC S685 38,0
Error in line 90: YT3Tg S685 78,7
Error in line 99: YT3Tg A266 22,33
Error in line 95: sCHs A266 27,6
Error in line 105: YT3Tg A266 18,9
Error in line 118: KhbVbrC A229 22,4
Error in line 115: YT3Tg A229 93,9
Error in line 120: YT3Tg A266 32,4
Error in line 122: YT3Tg A229 26,8
Error in line 109: PIgu S585 45,8
Error in line 124: YT3Tg A266 29,3
Error in line 140: KhbVbrC A229 71,5
Error in line 137: A266 S685 45,5
Error in line 155: PIgu S585 98,0
Error in line 174: A266 A266 69,2
Error in line 164: sCHs A266 55,5
Error in line 175: KhbVbrC S685 3,3
Error in line 179: EHJBQ A229 50,6
Error in line 163: PIgu S685 178,8
Error in line 190: EHJBQ S585 55,1
Error in line 199: EHJBQ A229 27,3
Error in line 203: EHJBQ S685 18,8
Error in line 210: PIgu A229 64,67
Error in line 211: PIgu S685 0,1
Error in line 208: EHJBQ S585 52,8
Error in line 206: Cq6b2HMua A229 191,3
Error in line 219: Cq6b2HMua S685 45,4
Error in line 214: KhbVbrC A229 36,4
Error in line 229: PIgu A229 85,9
Error in line 233: KhbVbrC A266 45,5
Error in line 218: EHJBQ A266 35,1
Error in line 230: YT3Tg A229 9,5
